--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,9 @@ pythonpath = "src"
 python = "^3.12"
 jupyter = "^1.1.1"
 pre-commit = "^4.1.0"
+flake8 = "^7.1.1"
+pylint = "^3.3.4"
+isort = "^5"
 
 
 [build-system]
