add: poetry runner "ds"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,3 +89,6 @@ matplotlib = "^3.10.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+ds = "delta-shift.main:start"
